--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8.4.1",
     "jest": "^27.4.5",
     "knex-cleaner": "^1.3.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.1.6"
   }
 }
